--- a/index.html
+++ b/index.html
@@ -3,27 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- SEO Meta Tags -->
     <meta name="description" content="ILoveAu - Your premier travel agency for exploring Australia and international destinations. Discover the Great Barrier Reef, Uluru, Blue Mountains, and more.">
     <meta name="keywords" content="Australia travel, Great Barrier Reef, Uluru, Blue Mountains, travel agency, international travel">
-    <meta name="author" content="Your Name">
-    
-    <!-- Open Graph Tags for Social Media -->
+    <meta name="author" content="Arezoo Yazdani">
     <meta property="og:title" content="ILoveAu - Australian & International Travel Specialists">
     <meta property="og:description" content="Discover Australia's most beautiful destinations with ILoveAu travel agency. Plan your perfect trip today!">
-    <meta property="og:image" content="images/great-barrier-reef.jpg">
+    <meta property="og:image" content="images/hero.jpg">
     <meta property="og:url" content="https://iloveautravel.com">
     
     <title>ILoveAu - Australian & International Travel Specialists</title>
     <link rel="stylesheet" href="styles/style.css">
-    <!-- Add Font Awesome for the logo -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
     <nav class="navbar" role="navigation" aria-label="Main navigation">
         <div class="logo">
-            <span class="logo-icon" aria-hidden="true">🦘</span>
+            <img src="images/logo.png" alt="ILoveAu Logo" class="logo-img">
             <span class="logo-text">ILoveAu</span>
         </div>
         <button class="mobile-menu-btn" aria-label="Toggle navigation menu" aria-expanded="false">
@@ -38,7 +33,6 @@
         </ul>
     </nav>
 
-    <!-- Hero Section -->
     <section id="home" class="hero" aria-label="Welcome section">
         <div class="hero-content">
             <h1>Discover Australia & Beyond</h1>
@@ -46,45 +40,44 @@
         </div>
     </section>
 
-    <!-- Australian Destinations Section -->
     <section id="australia" class="destinations" aria-label="Australian destinations">
         <h2>Explore Australia</h2>
         <div class="destination-grid">
-            <div class="destination-card" id="dest-great-barrier-reef">
-                <a href="https://www.gbrmpa.gov.au" target="_blank" class="destination-image-link" aria-label="Visit Great Barrier Reef website">
-                    <div class="destination-image" role="img" aria-label="Great Barrier Reef coral and marine life"></div>
+            <div class="destination-card" id="diamond-head-campground">
+                <a href="https://www.nationalparks.nsw.gov.au/camping-and-accommodation/campgrounds/diamond-head-campground" target="_blank" class="destination-image-link" aria-label="Visit Diamond Head campground website">
+                    <div class="destination-image" role="img" aria-label="Diamond Head campground"></div>
                 </a>
                 <div class="destination-content">
-                    <h3>Great Barrier Reef</h3>
-                    <p>Experience the world's largest coral reef system with vibrant marine life and crystal-clear waters.</p>
+                    <h3>Diamond Head Campground</h3>
+                    <p>The beachside campground at Diamond Head is one of the most popular places to stay in Crowdy Bay National Park. It has caravan sites, additional walk-in campsites and picnic amenities.</p>
                     <div class="destination-details" aria-label="Destination features">
-                        <span class="tag">Natural Wonder</span>
-                        <span class="tag">Marine Life</span>
-                        <span class="tag">Diving</span>
+                        <span class="tag">National Parks</span>
+                        <span class="tag">Kangaroo</span>
+                        <span class="tag">Picnic</span>
                     </div>
                 </div>
             </div>
-            <div class="destination-card" id="dest-uluru">
-                <a href="https://parksaustralia.gov.au/uluru/" target="_blank" class="destination-image-link" aria-label="Visit Uluru-Kata Tjuta website">
-                    <div class="destination-image" role="img" aria-label="Uluru-Kata Tjuta red rock and ancient Aboriginal culture"></div>
+            <div class="destination-card" id="jervisbay-holiday-park">
+                <a href="https://jervisbayholidaypark.com.au/" target="_blank" class="destination-image-link" aria-label=" Jervisbay Holiday Park website">
+                    <div class="destination-image" role="img" aria-label="Jervisbay Holiday Park"></div>
                 </a>
                 <div class="destination-content">
-                    <h3>Uluru-Kata Tjuta</h3>
-                    <p>Discover the spiritual heart of Australia with its iconic red rock and ancient Aboriginal culture.</p>
+                    <h3>Jervisbay Holiday Park</h3>
+                    <p>Jervis Bay Holiday Park is a well-maintained, unspoilt, privately owned park on a crystal clear waterway accessing Jervis Bay. A unique feature of the park is its own private boat ramp and floating Pontoon, a perfect spot to launch your boat, canoe or Kayak. </p>
                     <div class="destination-details" aria-label="Destination features">
-                        <span class="tag">Cultural Site</span>
-                        <span class="tag">Desert</span>
-                        <span class="tag">Sunrise Tours</span>
+                        <span class="tag">Pet Friendly</span>
+                        <span class="tag">Private Boat</span>
+                        <span class="tag">BBQ</span>
                     </div>
                 </div>
             </div>
-            <div class="destination-card" id="dest-blue-mountains">
-                <a href="https://www.nationalparks.nsw.gov.au/visit-a-park/parks/blue-mountains-national-park" target="_blank" class="destination-image-link" aria-label="Visit Blue Mountains National Park website">
-                    <div class="destination-image" role="img" aria-label="Blue Mountains wilderness, dramatic cliffs, and lush valleys"></div>
+            <div class="destination-card" id="west-head-lookout">
+                <a href="https://www.nationalparks.nsw.gov.au/things-to-do/lookouts/west-head-lookout" target="_blank" class="destination-image-link" aria-label="Visit West Head lookout website">
+                    <div class="destination-image" role="img" aria-label="West Head lookout"></div>
                 </a>
                 <div class="destination-content">
-                    <h3>Blue Mountains</h3>
-                    <p>Explore breathtaking wilderness, dramatic cliffs, and lush valleys just hours from Sydney.</p>
+                    <h3>West Head lookout</h3>
+                    <p>Enjoy incredible views from West Head lookout, regarded as one of Sydney's best in Ku-ring-gai Chase National Park. Photograph Pittwater and Barrenjoey Head, or take a short walk from here.</p>
                     <div class="destination-details" aria-label="Destination features">
                         <span class="tag">Hiking</span>
                         <span class="tag">Nature</span>
@@ -101,7 +94,6 @@
         </div>
     </section>
 
-    <!-- International Destinations Section -->
     <section id="international" class="destinations international" aria-label="International destinations">
         <h2>International Escapes</h2>
         <div class="destination-grid">
@@ -150,7 +142,6 @@
         </div>
     </section>
 
-    <!-- Trip Calculator Section -->
     <section id="calculator" class="calculator" aria-label="Trip cost calculator">
         <h2>Trip Cost Calculator</h2>
         <div class="calculator-container">
@@ -204,7 +195,6 @@
         </div>
     </section>
 
-    <!-- Contact Form Section -->
     <section id="contact" class="contact" aria-label="Contact form">
         <h2>Contact Us</h2>
         <div class="contact-container">
@@ -240,11 +230,10 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h4><span class="logo-icon">🦘</span> ILoveAu</h4>
+                <h4><img src="images/logo.png" alt="ILoveAu Logo" class="footer-logo-img"> ILoveAu</h4>
                 <p>Your Australian adventure begins with us</p>
             </div>
             <div class="footer-section">
@@ -257,17 +246,27 @@
             </div>
             <div class="footer-section">
                 <h4>Contact Info</h4>
-                <p>📍 Sydney, Australia</p>
-                <p>📞 1300 ILUVAU</p>
-                <p>✉️ info@iloveau.com.au</p>
+                <div class="contact-info">
+                    <div class="location">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span>Sydney, Australia</span>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://www.youtube.com" target="_blank" aria-label="Visit our YouTube channel">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                        <a href="https://www.instagram.com" target="_blank" aria-label="Follow us on Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 ILoveAu. All rights reserved.</p>
+            <p>&copy; 2025 ILoveAu. All rights reserved.</p>
         </div>
     </footer>
 
-    <!-- EmailJS SDK -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script>
         (function() {
